# kal-sync

./: .editorconfig  .gitignore  App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  Directory.Build.props  GlobalSuppressions.cs  GlobalXmlns.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  kal-sync.csproj  kal-sync.sln  stylecop.json
.github/workflows/: ci.yml
Converters/: DoubleToIntStringConverter.cs  InvertedBoolConverter.cs  LeanBodyMassConverter.cs  StringNotNullEmptyConverter.cs  SurplusToColorConverter.cs  TargetRingDrawable.cs
Models/: ActivityResponse.cs  TrafficLight.cs  UserProfile.cs
Services/: GaintainingService.cs  GarminApiServices.cs  UserProfileService.cs
ViewModels/: HomeViewModel.cs  SettingsViewModel.cs
Views/: EmptyStateView.xaml  EmptyStateView.xaml.cs  HomePage.xaml  HomePage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
garmin-backend/: .coverage  .env.example  calorie_calculator.py  garmin_service.py  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt
garmin-backend/tests/: conftest.py  test_api_integration.py  test_calorie_calculator.py
kal-sync.Tests/: Directory.Build.props  kal-sync.Tests.csproj
kal-sync.Tests/Services/: GaintainingServiceTests.cs  UserProfileServiceTests.cs
